--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@ a{
 }
 
 body{
-    background: url("images/3902.jpg");
+    background: url("images\3902.jpg");
 
   background-attachment: fixed;
 background-size:cover;
