--- a/stylesheet.css
+++ b/stylesheet.css
@@ -253,6 +253,10 @@ cursor: pointer;
 }
 
 @media(max-width:800px){
+    
+    #header{
+        font-size: 2.2em;
+    }
     .button{
         flex-direction: column;
     }
