--- a/stylesheet.css
+++ b/stylesheet.css
@@ -250,6 +250,9 @@ cursor: pointer;
 }
 @media(max-width:990px){
     
+    #header{
+        font-size: 2.2em;
+    }
 }
 
 @media(max-width:800px){
