--- a/stylesheet.css
+++ b/stylesheet.css
@@ -250,6 +250,9 @@ cursor: pointer;
 
         /* font-size: 2.1em; */
     
+        #header{
+            font-size: 2.1em;
+        }
 }
 @media(max-width:990px){
     
@@ -299,7 +302,7 @@ cursor: pointer;
 @media(max-width:600px){
 
      #header{
-         font-size: 2.2em;
+         font-size: 2em;
      }
      .content{
          width:80%
