--- a/stylesheet.css
+++ b/stylesheet.css
@@ -286,10 +286,10 @@ cursor: pointer;
    }
    #video{
     animation:move4i 0.2s linear forwards;
-   top:10%;
-    height:80%;
-    width:100%;
-    /* left:20%  */
+   top:15%;
+    height:70%;
+    width:85%;
+    left:-15% 
 }
 #back{
     animation:move4i 0.2s linear forwards;
