--- a/stylesheet.css
+++ b/stylesheet.css
@@ -315,7 +315,7 @@ cursor: pointer;
    left: -14%;
     }     
     #back{
-
+ visibility: hidden;
         /* right:30px; */
     }
 }
@@ -328,6 +328,7 @@ cursor: pointer;
         width:80%;
         left:-20% 
     }     
+
 }
 
 
