--- a/stylesheet.css
+++ b/stylesheet.css
@@ -214,7 +214,9 @@ position:fixed;
 #back{
     position: relative;
     top:5px;
-    width:180px;
+    min-width:130px;
+    max-width: 130px;
+    text-align: center;
 color:green;
 margin:0 auto;
 /* padding-left:46%;/ */
@@ -247,9 +249,6 @@ cursor: pointer;
 
 @media(min-width:1200px){
 
-
-        /* font-size: 2.1em; */
-    
         #header{
             font-size: 2.1em;
         }
@@ -287,16 +286,15 @@ cursor: pointer;
    #video{
     animation:move4i 0.2s linear forwards;
    top:15%;
-    height:70%;
-    width:75%;
+    height:74%;
+    width:85%;
     left:-15% 
 }
 #back{
     animation:move4i 0.2s linear forwards;
     position:absolute;
-    right:-70px;
+    right:5px;
     top:46%;
-visibility: hidden;
 }
 }
 
