--- a/stylesheet.css
+++ b/stylesheet.css
@@ -258,6 +258,9 @@ cursor: pointer;
     #header{
         font-size: 2.1em;
     }
+    #back{
+        visibility: hidden;
+    }
 }
 
 @media(max-width:800px){
