--- a/stylesheet.css
+++ b/stylesheet.css
@@ -225,7 +225,7 @@ background-color: rgb(0,0,0,0.8);
 /* background-color: red; */
 text-shadow: 0.7px 0.7px white;
 cursor: pointer;
-visibility: hidden;
+/* visibility: hidden; */
 }
 
 
@@ -259,9 +259,7 @@ visibility: hidden;
     #header{
         font-size: 2.1em;
     }
-    #back{
-        visibility: hidden;
-    }
+
 }
 
 @media(max-width:800px){
@@ -299,7 +297,7 @@ visibility: hidden;
     position:absolute;
     right:-25px;
     top:46%;
-    visibility: hidden;
+    /* visibility: hidden; */
 }
 }
 
@@ -319,7 +317,7 @@ visibility: hidden;
    left: -14%;
     }     
     #back{
- visibility: hidden;
+ /* visibility: hidden; */
         /* right:30px; */
     }
 }
@@ -332,9 +330,6 @@ visibility: hidden;
         width:80%;
         left:-20% 
     }     
-    #back{
-        visibility: hidden;
-    }
 
 }
 
