--- a/stylesheet.css
+++ b/stylesheet.css
@@ -212,24 +212,29 @@ position:fixed;
 }
 
 #back{
-    position: relative;
-    top:5px;
-    min-width:130px;
-    max-width: 130px;
+    position:fixed;
+    top:10px;
+    right:20px;
+    height:40px;
+    width:40px;
     text-align: center;
-color:green;
-margin:0 auto;
-/* padding-left:46%;/ */
-font-family: 'Times New Roman', Times, serif;
-background-color: rgb(0,0,0,0.8);
-/* background-color: red; */
-text-shadow: 0.7px 0.7px white;
+color:whitesmoke;
+
+border-radius:50px;
+font-size: 25px;
+
+font-family:serif;
+
+background-color:black;
+
 cursor: pointer;
-/* visibility: hidden; */
+
 }
 
-
-
+#back:hover{
+    color:black;
+    background-color: white;
+}
 
 @keyframes move4i{
     0%{
@@ -249,11 +254,14 @@ cursor: pointer;
 
 
 @media(min-width:1200px){
-
+    
         #header{
             font-size: 2.1em;
         }
-}
+
+
+
+    }
 @media(max-width:990px){
     
     #header{
@@ -293,12 +301,13 @@ cursor: pointer;
     left:-15% 
 }
 #back{
-    animation:move4i 0.2s linear forwards;
-    position:absolute;
-    right:-25px;
-    top:46%;
-    /* visibility: hidden; */
+    top:unset;
+    bottom:10px;
+    right:5px;
+    
 }
+
+
 }
 
 @media(max-width:600px){
@@ -316,10 +325,7 @@ cursor: pointer;
    min-width:550px;
    left: -14%;
     }     
-    #back{
- /* visibility: hidden; */
-        /* right:30px; */
-    }
+    
 }
 
 @media(max-width:480px){
