--- a/stylesheet.css
+++ b/stylesheet.css
@@ -221,9 +221,9 @@ position:fixed;
 color:whitesmoke;
 
 border-radius:50px;
-font-size: 25px;
+font-size: 27px;
 
-font-family:serif;
+font-family:Arial, Helvetica, sans-serif;
 
 background-color:black;
 
@@ -295,14 +295,13 @@ cursor: pointer;
    }
    #video{
     animation:move4i 0.2s linear forwards;
-   top:2%;
-    height:100%;
-    width:90%;
-    left:-15% 
+    
 }
+
 #back{
-    top:unset;
-    bottom:10px;
+    /* top:unset; */
+    /* bottom:10px; */
+    top:5px;
     right:5px;
     
 }
@@ -320,10 +319,7 @@ cursor: pointer;
      }
      #video{
         animation:move4i 0.2s linear forwards;
-        top:10%;
-    height:600px;
-   min-width:550px;
-   left: -14%;
+        
     }     
     
 }
@@ -333,8 +329,6 @@ cursor: pointer;
     #video{
         animation:move4i 0.2s linear forwards;
         
-        width:80%;
-        left:-20% 
     }     
 
 }
