--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,7 +34,7 @@ width:100%;
     display: flex;
     flex-direction:column;
     height:14vh;
-    z-index: -1;
+    /* z-index: -1; */
     /* z-index: 0; */
 }
 #header{
