--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,7 +19,8 @@ background-size:cover;
 
 #mainWindow{
 position: fixed;
-height:800px;
+/* height:800px; */
+height:100vh;
 width:100%;
 /* background-color: red; */
 /* z-index:0; */
