--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,7 +18,7 @@ background-size:cover;
 }
 
 #mainWindow{
-/* position: fixed; */
+position: fixed;
 /* height:800px; */
 height:100vh;
 width:100%;
