--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ a{
 body{
     background: url("images/3902.jpg");
 
-  background-attachment:static;
+  background-attachment: fixed;
 background-size:cover;
 
   background-repeat: no-repeat;
@@ -18,11 +18,13 @@ background-size:cover;
 }
 
 #mainWindow{
-position: fixed;
+position: absolute;
+top:0%;
+left:0%;
 /* height:800px; */
 height:100vh;
 width:100%;
-background-color: green;
+background-color: yellow;
 /* z-index:0; */
 
 
